# opensky-sensor

./: .cproject  .gitignore  .hgignore  .project  COPYING  ChangeLog  Makefile.am  README  README.md  anforderungen_koellner.txt  bootstrap  build-mingw  configure.ac  package
debian/: README.Debian  README.source  changelog  config  control  copyright  libopensky-c++-dev.install  libopensky-c++1.install  opensky-feeder-donated.config  opensky-feeder-donated.install  opensky-feeder-donated.postinst  opensky-feeder-donated.postrm  opensky-feeder-kit.config  opensky-feeder-kit.install  opensky-feeder-kit.postinst  opensky-feeder-kit.templates  opensky-feeder.config  opensky-feeder.install  opensky-feeder.postinst  opensky-feeder.service  opensky-feeder.templates  openskyd.conf  postinst  postrm  rules  templates
debold/: changelog  control  copyright  openskyd.conf  openskyd.service  rules
openskyd-arch/: BB-B-Radarcape.dts  BB-W-Radarcape.dts  PKGBUILD  openskyd-start.sh  openskyd-wd.install  openskyd-wd.service  openskyd.install  openskyd.service
openskyd-arch/black/: PKGBUILD  openskyd-start.sh
openskyd-arch/common/: openskyd.service
openskyd-arch/white/: BB-W-Radarcape.dts  PKGBUILD  openskyd.install  openskyd.service
openskyd-opkg/: build.make  openskyd.conf  openskyd.service  opkg-build
openskyd-opkg/CONTROL/: control  postinst  preinst  prerm
src/: Makefile.am  adsb.c  adsb.h  buffer.c  buffer.h  cape.c  cape.cfg  cfgfile.c  cfgfile.h  component.c  component.h  endec.h  filter.c  filter.h  fpga.c  fpga.h  framebuffer.c  framebuffer.h  gpio.c  gpio.h  gps.c  gps.h  gps_input.h  gps_input_dummy.c  gps_input_network.c  gps_input_uart.c  gps_parser.c  gps_parser.h  gps_recv.c  gps_recv.h  input.h  input_dummy.c  input_network.c  input_uart.c  log.h  log_stdio.c  main.c  message.c  message.h  net_common.c  (+25 more)
src/core/: Makefile.am  beast.c  beast.h  buffer.c  buffer.h  devicetypes.h  filter.c  filter.h  gps.c  gps.h  input.h  login.c  login.h  network.c  network.h  openskytypes.h  recv.c  recv.h  relay.c  relay.h  serial.h  tb.c  tb.h
src/dump1090/: Makefile.am  devtype.c  devtype.h  dump1090.c  position.c  position.h  req-serial.c  req-serial.h
src/gplib/: Makefile.am  devicetypes.h  libopensky-c++.pc.in  log_lib.cc  opensky-example.cc  opensky.cc  opensky.hh
src/gps/: gps_input.h  gps_input_dummy.c  gps_input_network.c  gps_input_uart.c  gps_parser.c  gps_parser.h  gps_recv.c  gps_recv.h
src/lib/: Makefile.am  MessageTypes.h  log_lib.cc  opensky-example.c  opensky-example.cc  opensky-test.cc  opensky.c  opensky.cc  opensky.h  opensky.hh
src/radarcape/: Makefile.am  dummy.c  fpga.c  fpga.h  gpio.c  gpio.h  input-radarcape.c  input.c  main.c  network.c  openskyd.conf  radarcape.c  radarcape.h  rc-input.h  rc-parser.c  rc-parser.h  tb-misc.c  tb-misc.h  tb-rshell.c  tb-rshell.h  tb_standalone.c  tb_standalone.h  uart.c  watchdog.c  watchdog.h  wd-main.c
src/radarcape/lib/: GpsStatus.h  Makefile.am  log_lib.cc  opensky-example.cc  opensky-test.cc  opensky.cc  opensky.hh
src/test/: Makefile.am  glue.c  input_perf.c  input_perf.h  input_test.c  input_test.h  libdummy.c  perf_adsb.c  perf_buffer.c  perf_radarcape.c  test_adsb.c  test_buffer.c  test_gps.c  test_lib.c  test_lib.cc  test_list.c  test_radarcape.c  test_recv.c
src/trimble/: Makefile.am  trimble_input.h  trimble_input_dummy.c  trimble_input_network.c  trimble_input_uart.c  trimble_parser.c  trimble_parser.h  trimble_recv.c  trimble_recv.h
src/util/: Makefile.am  cfgfile.c  cfgfile.h  component.c  component.h  endec.h  list.h  log.h  log_stdio.c  net_common-posix.c  net_common-winsock.c  net_common.c  net_common.h  proc.c  proc.h  serial_eth.c  serial_eth.h  statistics.c  statistics.h  threads.h  util.c  util.h
src/util/port/: endian.h  misc.h  mmap-posix.c  mmap-windows.c  mmap.h  socket.h
src/windows/: Makefile.am  feeder.c  feeder.h  opensky.manifest  opensky.rc  resource.h  winmain.c
