
noinst_LIBRARIES = libcore.a

# core sources of opensky sensor
libcore_a_SOURCES = relay.h relay.c filter.h filter.c buffer.h buffer.c \
	network.h network.c tb.h tb.c openskytypes.h devicetypes.h input.h \
	gps.c gps.h recv.h recv.c login.h login.c beast.h beast.c serial.h

AM_CFLAGS = -I$(top_srcdir)/src
